--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>React App</title>
+    <title>Coinmech</title>
   </head>
   <body>
     <noscript>
